# shot-scraper-api

./: .gitignore  .shot-scraper-api-copier-answers.yml  CHANGELOG.md  Dockerfile  README.md  deployment.yaml  docker-compose.yml  justfile  pyproject.toml
scripts/: playwright_shots.py  playwright_shots_one_launch.py  shot.py  shot_subinterp.py  shot_worker.py
shot_scraper_api/: __about__.py  config.py  s3.py
shot_scraper_api/api/: app.py
shot_scraper_api/cli/: api.py  app.py  common.py  config.py  tui.py
shot_scraper_api/tui/: app.py
static/: app.css
templates/: base.html  image_status.html  index.html  output.html
